# docs/admin/admin_swagger.yaml
@@ -39,6 +39,110 @@ definitions:
     - dataScope
     - roleId
     type: object
+  dto.RsHostDeleteReq:
+    properties:
+      ids:
+        items:
+          type: integer
+        type: array
+    type: object
+  dto.RsHostInsertReq:
+    properties:
+      balance:
+        type: string
+      belong:
+        type: string
+      businessSn:
+        type: string
+      city:
+        type: string
+      cpu:
+        type: string
+      createBy:
+        type: integer
+      desc:
+        type: string
+      disk:
+        type: string
+      enable:
+        type: string
+      hostName:
+        type: string
+      ip:
+        type: string
+      isp:
+        type: string
+      kernel:
+        type: string
+      layer:
+        type: string
+      memory:
+        type: string
+      netDevice:
+        type: string
+      operator:
+        type: string
+      province:
+        type: string
+      remark:
+        type: string
+      sn:
+        type: string
+      status:
+        type: string
+      updateBy:
+        type: integer
+    type: object
+  dto.RsHostUpdateReq:
+    properties:
+      balance:
+        type: string
+      belong:
+        type: string
+      businessSn:
+        type: string
+      city:
+        type: string
+      cpu:
+        type: string
+      createBy:
+        type: integer
+      desc:
+        type: string
+      disk:
+        type: string
+      enable:
+        type: string
+      hostName:
+        type: string
+      id:
+        description: 主键编码
+        type: integer
+      ip:
+        type: string
+      isp:
+        type: string
+      kernel:
+        type: string
+      layer:
+        type: string
+      memory:
+        type: string
+      netDevice:
+        type: string
+      operator:
+        type: string
+      province:
+        type: string
+      remark:
+        type: string
+      sn:
+        type: string
+      status:
+        type: string
+      updateBy:
+        type: integer
+    type: object
   dto.SysApiDeleteReq:
     properties:
       ids:
@@ -851,6 +955,59 @@ definitions:
     - username
     - uuid
     type: object
+  models.RsHost:
+    properties:
+      balance:
+        type: string
+      belong:
+        type: string
+      businessSn:
+        type: string
+      city:
+        type: string
+      cpu:
+        type: string
+      createBy:
+        type: integer
+      createdAt:
+        type: string
+      desc:
+        type: string
+      disk:
+        type: string
+      enable:
+        type: string
+      hostName:
+        type: string
+      id:
+        type: integer
+      ip:
+        type: string
+      isp:
+        type: string
+      kernel:
+        type: string
+      layer:
+        type: string
+      memory:
+        type: string
+      netDevice:
+        type: string
+      operator:
+        type: string
+      province:
+        type: string
+      remark:
+        type: string
+      sn:
+        type: string
+      status:
+        type: string
+      updateBy:
+        type: integer
+      updatedAt:
+        type: string
+    type: object
   response.Page:
     properties:
       count:
@@ -1055,7 +1212,6 @@ info:
   description: 基于Gin + Vue + Ant UI的前后端分离权限管理系统的接口文档
   license:
     name: MIT
-    url: https://github.com/go-admin-team/go-admin/blob/master/LICENSE.md
   title: go-admin API
   version: 2.0.0
 paths:
@@ -1849,6 +2005,17 @@ paths:
       summary: 上传图片
       tags:
       - 公共接口
+  /api/v1/register/healthy:
+    post:
+      description: 主动上报
+      responses:
+        "200":
+          description: '{"code": 200, "data": "","msg":"successful"}'
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 主机存活注册
+      tags:
+      - 主机上报
   /api/v1/role:
     delete:
       description: 删除数据
@@ -1984,6 +2151,173 @@ paths:
       summary: 修改用户角色
       tags:
       - 角色/Role
+  /api/v1/rs-host:
+    delete:
+      description: 删除RsHost
+      parameters:
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RsHostDeleteReq'
+      responses:
+        "200":
+          description: '{"code": 200, "message": "删除成功"}'
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - Bearer: []
+      summary: 删除RsHost
+      tags:
+      - RsHost
+    get:
+      description: 获取RsHost列表
+      parameters:
+      - description: 开关
+        in: query
+        name: enable
+        type: string
+      - description: 主机名
+        in: query
+        name: hostName
+        type: string
+      - description: sn
+        in: query
+        name: sn
+        type: string
+      - description: ip
+        in: query
+        name: ip
+        type: string
+      - description: 内核版本
+        in: query
+        name: kernel
+        type: string
+      - description: 机器归属
+        in: query
+        name: belong
+        type: string
+      - description: 备注
+        in: query
+        name: remark
+        type: string
+      - description: 运营商
+        in: query
+        name: operator
+        type: string
+      - description: 主机状态
+        in: query
+        name: status
+        type: string
+      - description: 业务SN
+        in: query
+        name: businessSn
+        type: string
+      - description: 省份
+        in: query
+        name: province
+        type: string
+      - description: 页条数
+        in: query
+        name: pageSize
+        type: integer
+      - description: 页码
+        in: query
+        name: pageIndex
+        type: integer
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/response.Page'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/models.RsHost'
+                        type: array
+                    type: object
+              type: object
+      security:
+      - Bearer: []
+      summary: 获取RsHost列表
+      tags:
+      - RsHost
+    post:
+      consumes:
+      - application/json
+      description: 创建RsHost
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RsHostInsertReq'
+      responses:
+        "200":
+          description: '{"code": 200, "message": "添加成功"}'
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - Bearer: []
+      summary: 创建RsHost
+      tags:
+      - RsHost
+  /api/v1/rs-host/{id}:
+    get:
+      description: 获取RsHost
+      parameters:
+      - description: id
+        in: path
+        name: id
+        type: integer
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.RsHost'
+              type: object
+      security:
+      - Bearer: []
+      summary: 获取RsHost
+      tags:
+      - RsHost
+    put:
+      consumes:
+      - application/json
+      description: 修改RsHost
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RsHostUpdateReq'
+      responses:
+        "200":
+          description: '{"code": 200, "message": "修改成功"}'
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - Bearer: []
+      summary: 修改RsHost
+      tags:
+      - RsHost
   /api/v1/server-monitor:
     get:
       description: 获取JSON
